@@ -9,11 +9,15 @@ if [ -e $PO ]; then
     exit 1
   fi
 fi
-if [ -e Makefile ]; then
-  PV=$( grep PACKAGE_VER Makefile|sed 's!.*= *!!')
+if [ -n "$1" ]; then # assume we were passed in a revision number
+  PV="$1"
 else
-  PV="PACKAGE VERSION"
-  echo "********WARNING $PV cannot be set until configure is run************"
+  if [ -e Makefile ]; then
+    PV=$( grep PACKAGE_VER Makefile|sed 's!.*= *!!')
+  else
+    PV="PACKAGE VERSION"
+    echo "********WARNING $PV cannot be set until configure is run************"
+  fi
 fi
 echo "#Generated by extract_strings">$PO
 echo "msgid \"\"" >>$PO
