@@ -335,10 +335,12 @@ exit 0
 }
 #update the .pot file for translators
 update_pot () {
-cp $CDIR/po/parcellite.pot $CDIR/_parcellite.pot
-$CDIR/extract_strings.sh
-_DIFF=$(diff -q $CDIR/_parcellite.pot $CDIR/po/parcellite.pot|grep -c differ)
+_PO="parcellite.pot"
+cp $CDIR/po/$_PO $CDIR/_$_PO
+$CDIR/extract_strings.sh "$tag"
+_DIFF=$(diff -q $CDIR/_$_PO $CDIR/po/$_PO|grep -c differ)
 if [ "0" != "$_DIFF" ]; then
-  svn ci -m"Updated parcellite.pot"
+  svn ci -m"Updated $_PO"
 fi
+rm $CDIR/_$_PO
 }
