@@ -7,6 +7,7 @@ V1.1.6 Tuesday, July 30 2013
  +Changed name of history file from hist.test to history (debug escape). 
    To restore the history, Quit Parcellite, then cd to $HOME/.local/share/parcellite
    mv hist.test history
+ +Added script to generate parcellite.pot, and gets run before each release.
  
 V1.1.5 Wednesday, July 17 2013
  +Added ppa script.
